@@ -11,9 +11,7 @@ import java.util.function.Function;
  */
 @SuppressWarnings({ "unchecked", "rawtypes", "unused" })
 public class StatementLambdaToExpressionRule {
-	public Function<Function, Function> f = (Function function) -> {
-		return function.compose(function);
-	};
+	public Function<Function, Function> f = (Function function) -> function.compose(function);
 
 	private Function<Function, Function> g = (Function function) -> function.compose(function);
 
@@ -26,57 +24,32 @@ public class StatementLambdaToExpressionRule {
 			element += 1;
 			return element;
 		});
-		list.stream().map(element -> {
-			return element * 2;
-		});
+		list.stream().map(element -> element * 2);
 		list.stream().map(element -> // I don't want to break anything
-		{
-			return element * 2;
-		});
-		list.forEach(element -> {
-			doSomething(element);
-		});
-		list.forEach(element -> {
-			elementString = element.toString();
-		});
-		list.forEach(element -> {
-			new Integer(1);
-		});
-		list.forEach(element -> {
-			doSomething(element);
-			return;
-		});
-		
+		element * 2);
+		list.forEach(this::doSomething);
+		list.forEach(element -> elementString = element.toString());
+		list.forEach(element -> Integer.valueOf(1));
+		list.forEach(this::doSomething);
+
 		/*
 		 * Saving comments
 		 */
-		
-		list.forEach(element -> {
-			// save me
-			new Integer(1);
-		});
-		
-		list.forEach(element -> {
-			new Integer(1);
-			// save trailing comment
-		});
-		
-		list.forEach(element -> {
-			new Integer(1);
-			
-		}// save lambda-exp trailing comment 
-		);
-		
-		list.forEach(element -> {
-			//save me
-			doSomething(element);
-			return;
-		});
-		
-		list.forEach(element -> {
-			new Integer(1);
-		}
-		 
+
+		// save me
+		list.forEach(element -> Integer.valueOf(1));
+
+		// save trailing comment
+		list.forEach(element -> Integer.valueOf(1));
+
+		// save lambda-exp trailing comment
+		list.forEach(element -> Integer.valueOf(1));
+
+		// save me
+		list.forEach(this::doSomething);
+
+		list.forEach(element -> Integer.valueOf(1)
+
 		// i'm here
 		);
 	}
