@@ -4,43 +4,43 @@ package preRule;
 public class TestPrimitiveBoxedForStringWithVariablesRule {
 
 	public String testIntegerLiteralConcat(int input) {
-		return "" + input;
+		return Integer.toString(input);
 	}
 
 	public String testIntegerNewLiteralTostring(int input) {
-		return new Integer(input).toString();
+		return Integer.toString(input);
 	}
 
 	public String testIntegerValueOfToString(int input) {
-		return Integer.valueOf(input).toString();
+		return Integer.toString(input);
 	}
 
 	public String testLongLiteralConcat(long input) {
-		return "" + input;
+		return Long.toString(input);
 	}
 
 	public String testLongLongNewLiteralTostring(long input) {
-		return new Long(input).toString();
+		return Long.toString(input);
 	}
 
 	public String testLongIntegerNewLiteralTostring(int input) {
-		return new Long(input).toString();
+		return Long.toString(input);
 	}
 
 	public String testLongLongValueOfToString(long input) {
-		return Long.valueOf(input).toString();
+		return Long.toString(input);
 	}
 
 	public String testLongIntegerValueOfToString(int input) {
-		return Long.valueOf(input).toString();
+		return Long.toString(input);
 	}
 
 	public String testFloatLiteralConcat(float input) {
-		return "" + input;
+		return Float.toString(input);
 	}
 
 	public String testFloatNewLiteralTostring(float input) {
-		return new Float(input).toString();
+		return Float.toString(input);
 	}
 
 	public String testFloatDoubleNewLiteralTostring(double input) {
@@ -48,61 +48,61 @@ public class TestPrimitiveBoxedForStringWithVariablesRule {
 	}
 
 	public String testFloatLongNewLiteralTostring(long input) {
-		return new Float(input).toString();
+		return Float.toString(input);
 	}
 
 	public String testFloatIntegerNewLiteralTostring(int input) {
-		return new Float(input).toString();
+		return Float.toString(input);
 	}
 
 	public String testFloatValueOfToString(float input) {
-		return Float.valueOf(input).toString();
+		return Float.toString(input);
 	}
 
 	public String testFloatLongValueOfToString(long input) {
-		return Float.valueOf(input).toString();
+		return Float.toString(input);
 	}
 
 	public String testFloatIntegerValueOfToString(int input) {
-		return Float.valueOf(input).toString();
+		return Float.toString(input);
 	}
 
 	public String testDoubleLiteralConcat(double input) {
-		return "" + input;
+		return Double.toString(input);
 	}
 
 	public String testDoubleNewLiteralTostring(double input) {
-		return new Double(input).toString();
+		return Double.toString(input);
 	}
 
 	public String testDoubleFloatNewLiteralTostring(float input) {
-		return new Double(input).toString();
+		return Double.toString(input);
 	}
 
 	public String testDoubleLongNewLiteralTostring(long input) {
-		return new Double(input).toString();
+		return Double.toString(input);
 	}
 
 	public String testDoubleIntegerNewLiteralTostring(int input) {
-		return new Double(input).toString();
+		return Double.toString(input);
 	}
 
 	public String testDoubleValueOfToString(double input) {
-		return Double.valueOf(input).toString();
+		return Double.toString(input);
 	}
 
 	public String testDoubleFloatValueOfToString(float input) {
-		return Double.valueOf(input).toString();
+		return Double.toString(input);
 	}
 
 	public String testDoubleLongValueOfToString(long input) {
-		return Double.valueOf(input).toString();
+		return Double.toString(input);
 	}
 
 	public String testDoubleIntegerValueOfToString(int input) {
-		return Double.valueOf(input).toString();
+		return Double.toString(input);
 	}
-	
+
 	public String testIntegertoStringWithParameters(int input) {
 		return Integer.valueOf(input).toString(4);
 	}
@@ -110,16 +110,16 @@ public class TestPrimitiveBoxedForStringWithVariablesRule {
 	public String test(Integer input) {
 		String result = "";
 
-		if(!("" + input).isEmpty()) {
-			result = new Integer(intSampleMethod("5") + Integer.valueOf(3) + input).toString();
-			Integer res = input + new Integer(1);
+		if (!(Integer.toString(input)).isEmpty()) {
+			result = Integer.toString(intSampleMethod("5") + Integer.valueOf(3) + input);
+			Integer res = input + Integer.valueOf(1);
 			result = result + res.toString();
 		}
 
 		return result;
 	}
-	
-	private Integer intSampleMethod(String returnME){
+
+	private Integer intSampleMethod(String returnME) {
 		return Integer.valueOf(returnME);
 	}
 }
